added custom action from articles_controller to rswag tag "action"
