# HW9/Articles/swagger/v1/swagger.yaml
@@ -4,6 +4,89 @@ info:
   title: API V1
   version: v1
 paths:
+  "/api/v1/articles":
+    parameters:
+    - name: search
+      in: query
+      description: search by text in title or body articles
+      schema:
+        type: string
+    - name: status
+      in: query
+      type: string
+      schema:
+        type: string
+        enum:
+        - unpublished
+        - published
+      description: sort article by status published/unpublished
+    - name: name
+      in: query
+      description: search article by author name
+      schema:
+        type: string
+    - name: tags
+      in: query
+      description: search articles by tags
+      schema:
+        type: string
+    - name: order
+      in: query
+      required:
+      - created_at
+      description: sort articles by creation date like asc/desc
+      schema:
+        type: string
+    get:
+      summary: list articles
+      tags:
+      - Articles
+      responses:
+        '200':
+          description: successful
+        '404':
+          description: article not found
+        '406':
+          description: unsupported accept header
+      description: Get all articles
+    post:
+      summary: create article
+      tags:
+      - Articles
+      description: Create article
+      parameters: []
+      responses:
+        '201':
+          description: article created
+        '422':
+          description: invalid request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                body:
+                  type: string
+                status:
+                  type: integer
+                author_id:
+                  type: integer
+              required:
+              - title
+              - body
+              - status
+              - author_id
+            examples:
+              '0':
+                summary: create article
+                value:
+                  title: Foo
+                  body: basic
+                  status: 1
+                  author_id: 4
   "/api/v1/articles/{article_id}/unpublished":
     parameters:
     - name: article_id
@@ -49,21 +132,6 @@ paths:
       responses:
         '200':
           description: successful
-  "/api/v1/articles":
-    get:
-      summary: list articles
-      tags:
-      - Articles
-      responses:
-        '200':
-          description: successful
-    post:
-      summary: create article
-      tags:
-      - Articles
-      responses:
-        '200':
-          description: successful
   "/api/v1/articles/{id}":
     parameters:
     - name: id
@@ -76,30 +144,82 @@ paths:
       summary: show article
       tags:
       - Articles
+      description: Get article by id
       responses:
         '200':
           description: successful
+        '404':
+          description: article not found
     patch:
       summary: update article
       tags:
       - Articles
+      description: Update article by id
+      parameters:
+      - name: id
+        in: path
+        schema:
+          type: object
+          properties:
+            title:
+              type: string
+            body:
+              type: string
+            status:
+              type: integer
+            author_id:
+              type: integer
+          required:
+          - title
+          - body
+          - status
+          - author_id
+        required: true
       responses:
-        '200':
-          description: successful
+        '201':
+          description: article updated
+        '422':
+          description: invalid request
     put:
       summary: update article
       tags:
       - Articles
+      description: Update article by id
+      parameters:
+      - name: id
+        in: path
+        schema:
+          type: object
+          properties:
+            title:
+              type: string
+            body:
+              type: string
+            status:
+              type: integer
+            author_id:
+              type: integer
+          required:
+          - title
+          - body
+          - status
+          - author_id
+        required: true
       responses:
-        '200':
-          description: successful
+        '201':
+          description: article updated
+        '404':
+          description: article not found
     delete:
       summary: delete article
       tags:
       - Articles
+      description: Delete article by id
       responses:
         '200':
           description: successful
+        '404':
+          description: article not found
   "/api/v1/authors":
     get:
       summary: list authors
@@ -350,7 +470,7 @@ paths:
         '200':
           description: successful
 servers:
-- url: https://{defaultHost}
+- url: http://{defaultHost}
   variables:
     defaultHost:
       default: 127.0.0.1:3000
